--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
